# xnu_ipc

./: CMakeLists.txt  LICENSE  README.md
01_mach_messages/: bob_client.c
02_mach_apis/: CMakeLists.txt
02_mach_apis/bidirectional/: bob_client.c
02_mach_bidirectional/: CMakeLists.txt
02_mach_bidirectional/complex_port/: bob_client.c  message.h
02_mach_bidirectional/reply_port/: alice_server.c
03_mach_ool_intro/: CMakeLists.txt  alice_server.c  bob_client.c  message.h
04_mach_ool_vm/: CMakeLists.txt  check_vm_fork.c  vm_utils.h
04_mach_ool_vm/ool_data_transfer_options/: alice_server.c  bob_client.c  message.h
04_mach_ool_vm/ool_virtual_copy_large/: alice_server.c  bob_client.c  message.h
mach_apis_two/: CMakeLists.txt  alice_server.c  bob_client.c
mach_apis_two/bidirectional/: alice_server.c  bob_client.c  message.h
mach_apis_two/complex_port/: alice_server.c  bob_client.c
mach_messages_one/: CMakeLists.txt  alice_server.c  bob_client.c  message.h
